@@ -92,6 +92,12 @@ ascman.host=<host for building the ascii man pages>
 catman.host=<host for building the catman pages>
 
 #
+#  Specify the MANMODE for ascman and catman.
+#  Allowed values are: ge geee sge sgeee
+#
+man.mode=<man mode for the man pages>
+
+#
 #   Deploy options
 #
 #deploy.host=<host where SWCControl is running as root>
