@@ -1,3 +1,7 @@
+JO-2007-02-20-0: Bugfix:      Enhance build.xml and build.properties for building
+                              man pages
+                 Review:      RH
+
 AP-2007-02-20-0: Bugfix:      Changing the default dbversion property in 
                               DBWriterTestConfig.properties.template
                               
